Uploaded image for project: 'JDK'
  1. JDK
  2. JDK-8233415

[lworld] VM crashes with assert(region != __null) failed: No region for 0x00000005d56dd5f0

XMLWordPrintable

      Using inline types in a prototype implementation of HashMap produces this error.

      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (open/src/hotspot/share/gc/g1/g1SATBMarkQueueSet.cpp:87), pid=21263, tid=21264
      # assert(region != __null) failed: No region for 0x00000005d56dd5f0
      #
      # JRE version: Java(TM) SE Runtime Environment (14.0) (fastdebug build 14-lworldea+0-2019-10-26-1616424.rriggs.valhalla-dev)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 14-lworldea+0-2019-10-26-1616424.rriggs.valhalla-dev, mixed mode, tiered, compressed oops, g1 gc, linux-amd64)
      # Problematic frame:
      # V [libjvm.so+0xd05a07] G1SATBMarkQueueSet::filter(SATBMarkQueue*)+0xaf7
      #

      hs_error attached.

      The error is reproducible with prototype patches (available on request) for using inline types
      and running the test: open/test/jdk/java/util/Map/Defaults.java

            thartmann Tobias Hartmann
            rriggs Roger Riggs
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: