8233415: [lworld] VM crashes with assert(region != __null) failed: No region for 0x00000005d56dd5f0